2018-05-26  Petasis George  <petasis@iit.demokritos.gr>
	* win/TkDND_OleDND.cpp: Fixed a bug in TKDND_REPORT_ERROR(x), where the
	errmsg pointer could go out of scope. Bug and patch provided by ralfixx
	Github user. Bug #18: https://github.com/petasis/tkdnd/issues/18.

        * Makefile.in: Added a fix for .cpp files, compiled under windows with
	configure/make. Bug and patch provided by ralfixx
	Github user. Bug #18: https://github.com/petasis/tkdnd/issues/18.

2018-02-13  Petasis George  <petasis@iit.demokritos.gr>
	configure.ac: "${TEA_PLATFORM}" = "windows" fails under MINGW64.
	Added a check for TEA_PLATFORM to include also MINGW64
	(windows|*MINGW64_*).

	* library/tkdnd_compat.tcl: Fixed a bug in compat::bindsource2,
	suggested by segalion: https://github.com/petasis/tkdnd/issues/13
	(The bug was that compat::bindsource2 called
	::tkdnd::drag_source register with event 2.)

2018-02-13  Petasis George  <petasis@iit.demokritos.gr>
	* configure:
	* configure.ac:
	* configure.in:
	* tclconfig/tcl.m4: Updated to latest TEA.

	* macosx/macdnd.m:
	* unix/TkDND_XDND.c: Tcl 9.0 seems to not define any more "CONST", thus
	add this definition if it is missing (defined to "const").

2018-01-16  Petasis George  <petasis@iit.demokritos.gr>
	* win/TkDND_OleDND.h: Made destructors in all classes virtual.

	* win/TkDND_OleDND.cpp: Fixes for C++ warnings (which does not allow to
	pass a static string to Tcl_SetResult()).

	* CMakeLists.txt: Added support for building with msys2 & gcc under
	windows.

2017-08-25  Petasis George  <petasis@iit.demokritos.gr>
	* CMakeLists.txt: Added support for -Dwith-tcl, -Dwith-tclsh.

2017-01-25  Petasis George  <petasis@iit.demokritos.gr>
	* win\OleDND.cpp: Fixed a memory leak on the pDropTarget object in
	TkDND_RegisterDragDropObjCmd. Added calls to RevokeDragDrop on window
	destroy.

2017-01-20  Petasis George  <petasis@iit.demokritos.gr>
	* configure.in:
	* CMakeLists.txt:
	* library\tkdnd_windows.tcl: